# ym-laboratory

./: .gitignore  .markdownlint.json  00_PHASE32_WORK_INSTRUCTION.md  PROJECT_STATUS.md  VERSIONING.md  app.js  app_b2b.js  app_beauty.js  app_core.js  app_dashboard.js  app_proposal_builder.js  app_traditional.js  engine.js  global_strategy_proposal.md  index.html  middleware.ts  style.css  vercel.json
ACPP/src/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
ACPP/src/acpp/: __init__.py  main.py
ACPP/src/acpp/agents/: analytics_agent.py  image_agent.py  knowledge_agent.py  publishing_agent.py  research_agent.py  seo_agent.py  writing_agent.py
ACPP/src/acpp/analytics/: __init__.py  analytics_gateway.py  mock_analytics_adapter.py
ACPP/src/acpp/config/: __init__.py  logging.py  settings.py
ACPP/src/acpp/core/: exceptions.py
ACPP/src/acpp/db/: __init__.py  base.py  init_db.py  session.py
ACPP/src/acpp/dependencies/: database.py  services.py
ACPP/src/acpp/models/: __init__.py  (+11 more)
ACPP/src/alembic/: env.py
ACPP/src/tests/: __init__.py  conftest.py  test_analytics_agent.py  test_api_analytics.py  test_api_health.py  test_api_image.py  test_api_knowledge.py  test_api_knowledge_structuring.py  test_api_publishing.py  test_api_repository.py  test_api_research.py  test_api_seo.py  test_api_writing.py  test_db_init.py  test_error_handling.py  test_image_agent.py  test_knowledge_agent.py  test_models.py  test_publishing_agent.py  test_repositories.py  test_research_agent.py  test_seo_agent.py  test_services.py  test_settings.py  test_writing_agent.py
(+976 files in other folders)
